# python-mip

./: .gitignore  README.md  conflict.py  examples.py  pyproject.toml  test_conflict.py
img/: ecuations.tex
mip/: cbc.py  conflict.py
mip/libraries/darwin/: cbc  correct_rpath.py  libCbc.0.dylib  libCbcSolver.0.dylib  libCgl.0.dylib  libClp.0.dylib  libClpSolver.0.dylib  libCoinUtils.0.dylib  libOsi.0.dylib  libOsiCbc.0.dylib  libOsiClp.0.dylib  libOsiCommonTest.0.dylib  libOsiGlpk.0.dylib  libbz2.1.0.dylib  libcoinasl.0.dylib  libcoinglpk.40.dylib  libcoinmetis.0.dylib  libcoinmumps.0.dylib  libedit.3.dylib  libgcc_s.1.dylib  libgfortran.5.dylib  libncurses.5.4.dylib  libquadmath.0.dylib  libz.1.dylib
scripts/: patchLibrariesMac.py
test/: get_name_error.py  test_conflict.py
