[tool.poetry]
name = "mip-infeasibility"
version = "0.1.0"
description = ""
authors = ["Pablo Azurduy <azurduy@uber.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mip = "^1.8.2"
numpy = "^1.18.4"
ipython = "^7.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
